examples/triton-transfomer/auth-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allowlist-by-paths-predictor
  namespace: istio-system
spec:
  selector:
    matchLabels:
      component: predictor
  action: ALLOW
  rules:
    - to:
        - operation:
            paths:
              - /metrics
              - /healthz
              - /ready
              - /wait-for-drain
              - /v1/models/*
              - /v2/models/*
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allowlist-by-paths-transformer
  namespace: istio-system
spec:
  selector:
    matchLabels:
      component: transformer
  action: ALLOW
  rules:
    - to:
        - operation:
            paths:
              - /metrics
              - /healthz
              - /ready
              - /wait-for-drain
              - /v1/models/*
              - /v2/models/*
